force-app/main/default/objects/Sesion__c/Sesion__c.object-meta.xml
<CustomObject>
    <description>Contiene los usuarios, correos y contraseñas de los usuarios para verificar su identidad y acceder a la informacion</description>
    <label>Sesion</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sesiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>