force-app/main/default/objects/Sesion__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>contraseña para inicio de sesion</description>
    <label>Contraseña</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>