force-app/main/default/objects/Sesion__c/fields/validacion__c.field-meta.xml
<CustomField>
    <fullName>validacion__c</fullName>
    <description>se usa para recuperar la contraseña</description>
    <label>validacion</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>